# capframe

./: CAST.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  leaderboard-daily.yml  release.yml
crates/capframe-cli/: Cargo.toml
crates/capframe-cli/src/: main.rs  modules.rs
crates/capframe-cli/src/commands/: bind.rs  doctor.rs  find.rs  guard.rs  install.rs  mod.rs  report.rs
crates/capframe-cli/tests/: cli.rs
crates/capframe-findings/: Cargo.toml
crates/capframe-findings/src/: lib.rs  v2.rs
crates/capframe-findings/tests/: schema.rs  schema_v2.rs
crates/capframe-leaderboard/: Cargo.toml
crates/capframe-leaderboard/src/: lib.rs  main.rs
crates/capframe-leaderboard/tests/: build.rs
crates/capframe-leaderboard/tests/fixtures/: good.findings.v2.json  mid.findings.v2.json  risky.findings.v2.json
docs/: ARCHITECTURE.md
examples/: demo-walkthrough.md  demo.tape
schemas/: findings.example.json  findings.v1.json  findings.v2.example.json  findings.v2.json
