[workspace]
resolver = "2"
members = [
    "crates/capframe-cli",
    "crates/capframe-findings",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.78"
license      = "MIT"
repository   = "https://github.com/capframe/capframe"
homepage     = "https://capframe.ai"
authors      = ["Capframe Contributors"]

[workspace.dependencies]
anyhow             = "1.0"
clap               = { version = "4.5", features = ["derive", "env"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
thiserror          = "1.0"
time               = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which              = "6.0"

capframe-findings = { path = "crates/capframe-findings" }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
