[package]
name        = "capframe-cli"
description = "Capframe — capability-based security for AI agents (CLI)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[[bin]]
name = "capframe"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
dirs               = { workspace = true }
maud               = { workspace = true }
semver             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
time               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
ureq               = { workspace = true }
which              = { workspace = true }
capframe-findings  = { workspace = true }

# In-process dispatch for `capframe find` — calls the classifier as a
# library instead of shelling out to the `mcp-recon` binary. Path dep so
# local checkouts compose; CI / release builds should switch this to a
# git dep pinned to the matching mcp-recon tag (or a crates.io version
# once mcp-recon-core is published). The `--external` flag still routes
# through the on-PATH binary if the user needs a different version.
mcp-recon-core     = { path = "../../../mcp-recon/crates/mcp-recon-core" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
