[package]
name        = "capframe-cli"
description = "Capframe — capability-based security for AI agents (CLI)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[[bin]]
name = "capframe"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
clap               = { workspace = true }
dirs               = { workspace = true }
maud               = { workspace = true }
semver             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
time               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
ureq               = { workspace = true }
which              = { workspace = true }
capframe-findings  = { workspace = true }

# In-process dispatch for `capframe find` — calls the classifier as a
# library instead of shelling out to the `mcp-recon` binary. Pinned by
# tag so CI is reproducible across machines; bump the tag in lockstep
# with mcp-recon releases that change the classifier surface. The
# `--external` flag still routes through the on-PATH binary if a user
# needs a different version than the one we compiled against.
mcp-recon-core     = { git = "https://github.com/euanmcrosson-dotcom/mcp-recon", tag = "v0.0.13" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
