[package]
name        = "capframe-findings"
description = "Capframe findings v1 — shared schema types for capframe-cli and modules"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
time       = { workspace = true }

[dev-dependencies]
jsonschema = { workspace = true }
