[package]
name        = "capframe-leaderboard"
description = "Aggregate findings.v2 documents into a ranked leaderboard JSON for capframe.ai/leaderboard"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "capframe-leaderboard"
path = "src/main.rs"

[dependencies]
anyhow            = { workspace = true }
capframe-findings = { workspace = true }
clap              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
time              = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
